# deckalization

./: .env.example  .env.local.example  .gitignore  AGENTS.md  README.md  langgraph.json  langgraph.prod.json  package-lock.json  package.json  pyproject.toml
.cursor/: mcp.json
.github/workflows/: ci-frontend.yml  ci.yml  eval.yml
agents/: __init__.py  config.py  context.py  graph.py  hello.py  llm.py  normalize.py  resolver.py  run_referee.py  schemas.py  scryfall.py  state.py  tracing.py
agents/baseline/: __init__.py  extract.py  prompts.py  rag.py  run.py  zero_shot.py
agents/core/: __init__.py  config.py  context.py  extract.py  llm.py  prompts.py  resolver.py  schemas.py  scryfall.py  tracing.py
agents/core/tools/: __init__.py  cards.py  convex_client.py  rules.py
agents/evals/: categories.py  evaluators.py  langsmith_eval.py  pipelines.py  run.py  thresholds.yaml
agents/evals/datasets/: benchmark_manifest.json  card_resolution.json
agents/evals/fixtures/: README.md
agents/evals/scripts/: build_benchmark_manifest.py  export_results.py  ingest_card_resolution.py  ingest_rulesguru.py  model_sweep.py  record_demo_runs.py  register_model_prices.py  tag_langsmith_projects.py
agents/ingest/: __init__.py  downloader.py  embedder.py  parser.py  run.py  seed_aliases.py
agents/nodes/: __init__.py  adjudication.py  card_lookup.py  formatter.py  out_of_scope.py  prompts.py  router.py  rules_retrieval.py  verifier.py
agents/referee/: __init__.py  adjudicate.py  routing.py  run.py  state.py
agents/referee/nodes/: __init__.py  adjudication.py  adjudication_v2.py  card_lookup.py  decompose.py  formatter.py  out_of_scope.py  patch.py  prompts.py  router.py  rules_retrieval.py  rules_retrieval_v2.py  verifier.py
agents/referee/v1/: __init__.py  graph.py
agents/referee/v2/: __init__.py  graph.py
agents/tools/: cards.py  convex_client.py  registry.py  rules.py
app/deckalization-front-end/: .gitignore  README.md  components.json  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
app/deckalization-front-end/public/: manifest.json
app/deckalization-front-end/public/data/: bench40-adjudication-sweep.csv  bench40-adjudication-sweep.json
app/deckalization-front-end/src/: convex-shims.d.ts  routeTree.gen.ts  router.tsx
app/deckalization-front-end/src/components/: api-bits.tsx  architecture-graph.tsx  brand-icons.tsx  charts.tsx  model-sweep-table.tsx  score-table.tsx  site-footer.tsx  site-nav.tsx  theme-provider.tsx  theme-toggle.tsx
app/deckalization-front-end/src/data/: api-endpoints.ts  metrics.ts  (+2 more)
convex/: aliases.ts  cards.ts  cardsImport.ts  crons.ts  evalCases.ts  hello.ts  queries.ts  rules.ts  schema.ts  tsconfig.json  types.d.ts
convex/_generated/: api.d.ts
convex/lib/: normalize.ts
docs/: eval-findings.md  why-opus-lost.md
evals/fixtures/: README.md  sample_questions.jsonl
mcp_server/: __init__.py  server.py
notebooks/: explore_resolver.ipynb
tests/: test_baseline_schemas.py  test_eval_manifest.py  test_graph.py  test_resolver.py  test_smoke.py
(+27 files in other folders)
