[project]
name = "deckalization"
version = "0.1.0"
description = "MTG rules referee — a multi-agent LangGraph assistant with citations to the Comprehensive Rules and Oracle card text."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langsmith>=0.1.0",
    "convex>=0.7.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "rapidfuzz>=3.9.0",
    "fastmcp>=2.0.0",
    "pyyaml>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "langgraph-cli[inmem]>=0.4.28",
    "ipykernel>=6.29.0",
    "pandas>=2.2.0",
]

# Build backend is only used when the project is installed as a package (e.g. the
# LangGraph Platform runs `uv pip install -e .` on deploy). Locally we run from the
# repo root and skip the install entirely (`tool.uv.package = false`), but the
# backend must still know which dirs are packages — without this, setuptools
# auto-discovery aborts on the flat layout (agents/mcp_server/app/convex side by side).
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agents*", "mcp_server*"]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["agents", "mcp_server", "app"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
files = ["agents", "mcp_server"]

[tool.pytest.ini_options]
testpaths = ["agents", "tests"]
python_files = ["test_*.py", "*_test.py"]
pythonpath = ["."]
addopts = "-q"
